# BSPPP

./: .gitignore  CMakeLists.txt
cmake/: bsp.boost.cmake  bsp.mpi.cmake
examples/: CMakeLists.txt  data.hpp  gmm.cpp  hello_hyb.cpp  inprod.cpp  psrs.cpp  psrs_hyb.cpp
include/bsppp/: bsppp.hpp
include/bsppp/core/: environment.hpp  par.hpp  pid.hpp  replicate.hpp
include/bsppp/core/traits/: is_par.hpp
include/bsppp/details/: environment.hpp
include/bsppp/details/env/: mpi.hpp  omp.hpp
include/bsppp/details/memory/: buffer.hpp
include/bsppp/details/primitives/: proj.hpp  put.hpp  size.hpp  split.hpp  sync.hpp
include/bsppp/details/primitives/proj/: mpi.hpp
include/bsppp/details/primitives/put/: data.hpp  mpi.hpp  omp.hpp  par.hpp
src/: environment.cpp  main.cpp
